$Id: History,v 1.21 1999-06-19 16:30:01 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

vis-01-00-14  19th June 1999  John Allison
- Removed references to G4Ray from GNUmakefile.
- Archived (cvs removed) all G4Ray files.
- Cosmetic change to an output statement in G4VisToOldVisCommands.cc/

vis-01-00-13  1st June 1999  John Allison
- Updated README for May Release (Satoshi, John).
- Removed G4Ray from tag.

31 Mai 1999  Guy Barrand
- G4XoViewer : remove enabling/disabling XoCamera popup menu logic. 
  In some situation (N03) we were loosing the XoCamera popup menu. 
- G4XoViewer : correct ClearStore, ClearTransientStore.

vis-01-00-12a  26th May 1999  John Allison
- G4TrajectoriesModel.cc: (*TC) [iT] -> DrawTrajectory ();

vis-01-00-12  25th May 1999  John Allison
- Moved global operator != to member function.
- Updated OPACS to handle "ClearTransientStore" (Guy).

vis-01-00-11  12th May 1999  Guy Barrand